[metadata]
name = tommano
version = 1.0.0
description_file = README.md
author = Roman Stolyarov
author_email = sadimer@ispras.ru
classifier =
    License :: OSI Approved :: MIT License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7

[files]
packages =
    translator
    definitions

[options]
packages = find:
include_package_data = True

[options.entry_points]
console_scripts = 
	tommano = cli.cli:main

